--- a/index.html
+++ b/index.html
@@ -348,6 +348,9 @@
 								</div>
 							</div>
 						</div>
+						<button type="button" class="btn btn-secondary" id="btn-distort">
+							Distort
+						</button>
 						<button type="button" class="btn btn-secondary" id="btn-normalize-levels">
 							Normalize
 						</button>
