--- a/index.html
+++ b/index.html
@@ -338,22 +338,45 @@
 							</tr>
 						</table>
 					</div>
-					<div class="align-middle text-center ml-sm-5">
-						<label for="distortion">Distortion</label>
-						<div class="d-inline-block mx-2 align-middle">
-							<div class="input-group">
-								<input type="number" max="921" value="0" step="0.2" class="form-control led-display d-inline" id="distortion" style="max-width: 90px">
-								<div class="input-group-append">
-									<span class="input-group-text led-label">dB</span>
-								</div>
-							</div>
+					<div class="text-center ml-sm-5">
+						<div class="d-inline-block">
+							<table>
+								<tr>
+									<td>
+										<label for="distortion" class="mr-2">Distortion</label>
+									</td>
+									<td style="max-width: 140px" class="pb-2">
+										<div class="input-group">
+											<input type="number" max="921" value="0" step="0.2" class="form-control led-display d-inline" id="distortion">
+											<div class="input-group-append">
+												<span class="input-group-text led-label">dB</span>
+											</div>
+										</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<label for="symmetry" class="mr-2">Symmetry</label>
+									</td>
+									<td class="pb-2">
+										<div class="input-group">
+											<input type="number" min="0" max="100" step="0.5" value="50" class="form-control led-display d-inline" id="symmetry">
+											<div class="input-group-append">
+												<span class="input-group-text led-label">%</span>
+											</div>
+										</div>
+									</td>
+								</tr>
+							</table>
 						</div>
-						<button type="button" class="btn btn-secondary" id="btn-distort">
-							Distort
-						</button>
-						<button type="button" class="btn btn-secondary" id="btn-normalize-levels">
-							Normalize
-						</button>
+						<div class="d-inline-block align-top">
+							<button type="button" class="btn btn-secondary" id="btn-distort">
+								Distort
+							</button>
+							<button type="button" class="btn btn-secondary" id="btn-normalize-levels">
+								Normalize
+							</button>
+						</div>
 					</div>
 				</fieldset>
 				<fieldset class="panel">
