Start implementing delay UI. Timbre frames bugfixes.

--- a/index.html
+++ b/index.html
@@ -880,6 +880,30 @@
 						</div>
 					</div>
 				</fieldset>
+				<fieldset class="panel">
+					<h1>Effects</h1>
+					<div class="row form-group">
+						<label class="col-auto col-md-3 col-form-label" for="delay-send-slider">
+							Delay Send
+						</label>
+						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
+							<input type="range" min="0" max="64" value="0" class="form-control-range mt-1" id="delay-send-slider">
+						</div>
+						<div class="col-4 col-sm-2 pr-md-4 ml-auto">
+							<input value="0" class="form-control led-display" id="delay-send">
+						</div>
+					</div>
+					<div class="row form-group small">
+						<div class="col-auto">
+							<div class="form-check">
+								<input type="checkbox" id="delay-invert" class="form-check-input">
+								<label for="delay-invert" class="form-check-label">
+									Invert Polarity
+								</label>
+							</div>
+						</div>
+					</div>
+				</fieldset>
 			</div>
 		</div>
 
