--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
 								<select id="key-sync" class="form-control led-display text-left">
 									<option value="off" selected>Off</option>
 									<option value="on">On</option>
-									<option value="first-on">First On</option>
+									<option value="first_on">First On</option>
 								</select>
 						</div>
 					</div>
