--- a/index.html
+++ b/index.html
@@ -1108,10 +1108,10 @@
 							Velocity Sensitivity
 						</label>
 						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
-							<input type="range" min="0" max="127" value="32" class="form-control-range mt-1 mb-2" id="op$-velocity-depth-slider">
+							<input type="range" min="0" max="64" value="0" class="form-control-range mt-1 mb-2" id="op$-velocity-depth-slider">
 						</div>
 						<div class="col-4 col-sm-2 pl-md-0 ml-auto">
-							<input type="number" min="-127" max="127" value="32" class="form-control led-display" id="op$-velocity-depth">
+							<input type="number" min="-157" max="157" value="0" class="form-control led-display" id="op$-velocity-depth">
 						</div>
 					</div>
 					<div class="row mb-2">
@@ -1119,10 +1119,10 @@
 							Velocity Offset
 						</label>
 						<div class="col-12 col-md-7 mb-3 my-md-auto pl-md-0">
-							<input type="range" min="0" max="127" value="96" class="form-control-range mt-1" id="op$-velocity-offset-slider">
+							<input type="range" min="0" max="127" value="0" class="form-control-range mt-1" id="op$-velocity-offset-slider">
 						</div>
 						<div class="col-4 col-sm-2 pl-md-0 ml-auto">
-							<input type="number" value="96" class="form-control led-display" id="op$-velocity-offset">
+							<input type="number" min="0" max="127" value="0" class="form-control led-display" id="op$-velocity-offset">
 						</div>
 					</div>
 					<div class="row mb-4" id="op$-velocity-direction">
